# qubic

./: Cargo.toml  README.md
qubic-cli/: Cargo.toml
qubic-cli/src/: main.rs
qubic-server/: Cargo.toml
qubic-server/src/: server.rs
src/: main.rs
toqueue-cli/: Cargo.toml
toqueue-cli/src/: main.rs
toqueue-server/: Cargo.toml
toqueue-server/src/: encoder.rs  server.rs
