[package]
name = "qubic-cli"
version = "0.1.0"
authors = ["djKooks <inylove82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
structopt = "0.3"
quinn = "0.7"

ring = "0.16"

