[package]
name = "qubic-server"
version = "0.0.1"
authors = ["djKooks <inylove82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["full"] }
tokio-stream = { version = "0.1" }

quinn = "0.7"
quiche = "0.9"
ring = "0.16"


[[bin]]
name = "server"
path = "src/server.rs"
